--- a/Trabajos/Práctica/Wattpad/css.css
+++ b/Trabajos/Práctica/Wattpad/css.css
@@ -3,22 +3,11 @@ body{
     margin: 0%;
 }
 
-.header{grid-area: header;}
-.main{grid-area: main;}
-.banner{grid-area: banner;}
-.right{grid-area: right;}
 
-.grid-cointener{
-    display: grid;
-    grid-template-areas: 
-    'header header header header'
-    'banner banner banner right'
-    'main main manin right';
-}
 
 .header{
-    background-color: white;
-    padding: 5px;
+    display: flex;
+    flex-direction: row;
 }
 
 ul{
@@ -34,6 +23,8 @@ ul{
 
 li{
     float: left;
+    text-align: center;
+    justify-self: center;
    
 }
 
@@ -41,7 +32,7 @@ li{
 li a, .dropbtn{
     display: inline-block;
     color: black;
-    text-align: center;
+    
     text-decoration: none;
     margin: 5px;
     padding: 15px;
@@ -96,4 +87,9 @@ li.prem{
     border-radius: 50px;
     padding: 8px 15px 8px 15px;
 
+}
+
+.perfil{
+    border-radius: 50%;
+    width: 30px;
 }
